Fix spacing on default page because I'm fussy like that

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,7 +21,7 @@
 
   .buddha-icon {
     @include size(100px);
-    margin: 0;
+    margin: 0 0 1.5em 0;
   }
 
   .enlightenment {
